# MorphLLM

./: LICENSE  README.md  pyproject.toml
morphllm/: __init__.py  attention.py  cli.py  continual.py  controller.py  layers.py  model.py  moe.py  monitor.py  optimizer_utils.py  trainer.py  transformer.py
tests/: test_attention.py  test_continual.py  test_controller.py  test_integration_e2e.py  test_layers.py  test_model.py  test_moe.py  test_monitor.py  test_optimizer_utils.py  test_transformer.py
